@@ -93,14 +93,10 @@ fix_ai_army_composition = true
 ; (for example Tides of Crimson). Under the standard game rules, this option has no effect.
 enable_pop_unit_ai = true
 
-; Reduces the maximum number of escorts the AI will assign to its naval transports and carriers. In the base game, the AI will assign 1, 2, or 3
-; escorts depending on the value of the transport and the number of units it's carrying. This setting reduces that upper limit of 3. Specifically:
-;   if set to false or <= 0, no effect
-;   if set to 1, the AI will assign 1 or 2 escorts
-;   if set to 2, the AI will only ever assign 1 escort
-;   if set >= 3, the AI will leave its naval transports unescorted
-; The purpose of reducing this limit is to free up the AI's naval power units for other purposes.
-reduce_max_escorts_per_ai_transport = false
+; In the base game, the AI will assign 1, 2, or 3 escort units to its naval transports and carriers depending in their shield cost and the number of
+; units they're carrying. This option lets you reduce the upper limit on the number of escorts assigned. You can limit the number of escorts to 2, 1,
+; or even 0. Setting this option >= 3 will result in base game behavior. The purpose of reducing the limit is to free up the AI's naval power units.
+max_ai_naval_escorts = 3
 
 [=================]
 [=== BUG FIXES ===]
